# nomadbad

./: .gitignore  README.md  demo.js  go.mod  index.html  main.go  makefile  schedule.html  styles.css  template.html
rr/: Cargo.toml  competitors.json  glicko.js  rr.js
rr/src/: glicko.rs  lib.rs  rr.rs
scripts/: calendarToHTML-header.mjs  calendarToHTML.mjs  generate.sh  generateSignIn.mjs  generate_local.sh  kill.sh  nmi.sh  start.sh  types.mjs  utils.mjs  utils.sh
server/: api.go  apiLocal.go  credentials.go  go.mod  main.go  utils.go
server/streetmed/: lib.go  query.go  serve.go
static/: about.html  colors.css  contact.html  index.css  index.html  login.html  milligram.css  schedule.css  schedule.html  styles.css  submission_failure.html  submission_successful.html
static/css/: colors.css  milligram.css  roboto.css  styles.css
static/jacobsalyers2/: guide.html  index.html
streetmed-static/: client.js  index.html  lib.js  onboarding.html  sign-up.html  style.css
templates/: local_wrapper.html  roboto.css  wrapper.html
templates/local/: sign-in.html  sign-up.html  submission_failure.html  submission_successful.html
templates/pages/: about.html  contact.html  index.html  login.html  q_and_a.html  schedule.html  submission_failure.html  submission_successful.html
