[package]
name = "rr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.24", features=["serde"] }
rand = "0.8.5"
serde = { version="1.0.160", features=["derive"] }
serde_json = "1.0.96"
strum = { version="0.24.1", features=["derive"] }
uuid = { version="1.3.1", features=["serde", "v4"] }
